Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             <div style="background:white; color:var(--primary); padding:2px 8px; border-radius:5px;">S1</div>
         </div>
         <div class="grid-container" id="grid-container"></div>
+   
         <div class="reward-section">
-            <div class="cagnotte">Ma Cagnotte : <span id="solde-total">0.00</span> €</div>
+            <div style="font-size: 0.9rem; color: #666;">Ma Cagnotte Totale : <strong id="total-gains" style="color: #27ae60;">0,00 €</strong></div>
             <hr>
-            <div>Croix : <span id="total-crosses" style="font-weight:bold">0</span> / 15</div>
+            <div>Total Croix : <span id="total-crosses">0</span></div>
             <div class="progress-bar"><div class="progress-fill" id="prog-fill"></div></div>
             <div id="money-val" style="font-size:1.5rem; font-weight:bold; color:#aaa;">0,00 €</div>
         </div>
@@ -117,3 +118,4 @@
     </script>
 </body>
 </html>
+
