--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="header-card">
             <div class="admin-lock" onclick="goToAdmin()">⚙️</div>
             <div id="user-title" style="font-weight:bold; font-size: 1.1rem;">TABLEAU</div>
-            <div style="width: 30px;"></div>
+            <div style="cursor:pointer; font-size: 1.2rem;" onclick="window.location.href='roue.html'">🎡</div>
         </div>
 
         <div class="grid-container" id="grid-container">
@@ -325,3 +325,4 @@
     </script>
 </body>
 </html>
+
