--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    
     <title>Tableau de Croix - Famille</title>
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0e5b5b">
+    <link rel="apple-touch-icon" href="icon-192.png">
+    
     <style>
         :root {
             --primary: #0e5b5b; /* Couleur sombre du PDF */
@@ -325,5 +331,6 @@
     </script>
 </body>
 </html>
+
 
 
